# dplock

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: FUNDING.yml
docs/: build.md
scripts/: build_release.sh  tar.sh
src/: cli.rs  crypto.rs  main.rs  utils.rs  vault.rs
