[package]
name = "dplock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dirs = "5.0"
rpassword = "7.2"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
arboard = "3.2.0"
qrcodegen = "1.8.0"
serde_json = "1.0.140"
crossterm = "0.27"
terminal_size = "0.4.2"
textwrap = "0.16.2"